--- a/scss/abstract/_compilerfile.scss
+++ b/scss/abstract/_compilerfile.scss
@@ -1,2 +1,3 @@
 @forward '../abstract/letter-sizing';
-@forward '../abstract/fonts'
+@forward '../abstract/font-sizes';
+@forward '../abstract/color';
