--- a/scss/buttons/_buttons.scss
+++ b/scss/buttons/_buttons.scss
@@ -1,7 +1,6 @@
 button {
-    background-color: #2C3333;
-    color: #CBE4DE;
     padding: .5rem .75rem;
-    border-radius: .5rem;
-    font-size: 1.3rem;
+    border-radius: 1.05rem;
+    border: none;
+    font-size: 1.05rem;
 }
