--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10770,11 +10770,10 @@ textarea.form-control-lg {
   }
 }
 button {
-  background-color: #2C3333;
-  color: #CBE4DE;
   padding: 0.5rem 0.75rem;
-  border-radius: 0.5rem;
-  font-size: 1.3rem;
+  border-radius: 1.05rem;
+  border: none;
+  font-size: 1.05rem;
 }
 
 ul li {
@@ -10786,51 +10785,68 @@ ul li {
   font-size: 1.5rem;
 }
 
-label {
-  font-size: 1.3rem;
+main {
+  width: 65rem;
+  min-width: 65rem;
+  height: 32.5rem;
+  min-height: 32.5rem;
+  margin: 1.5rem auto 0 auto;
+}
+main .quiz-title {
+  text-align: center;
+  padding: 0.75rem;
+  font-size: 2.5rem;
+  font-weight: 700;
+  border-bottom: 0.05rem solid black;
+}
+main .quiz-modification__container {
+  margin: 1.25rem 0 0 0;
 }
 
-#main {
-  margin: 8rem auto 0 auto;
-  background-color: #2C3333;
-  color: #CBE4DE;
+main {
+  position: relative;
 }
 
-#main > div {
-  padding: 1rem 0.75rem;
+.quiz-items__wrapper {
+  position: absolute;
+  height: 30rem;
+  width: 100%;
+  overflow: hidden;
+  background-color: #000000;
 }
 
-.hide {
+.quiz-item__el {
+  width: calc(100% - 1.25rem);
+  height: 20rem;
+  min-height: 20rem;
+  position: relative;
+  background-color: aliceblue;
+  margin: 0.5rem auto;
+}
+.quiz-item__el ::before {
+  content: attr(data-id);
+  display: block;
+  position: absolute;
+  background-color: 0;
+  font-size: large;
+}
+
+.move-item {
+  animation: moveUpDisappear 0.5s ease-in;
   display: none;
 }
 
-.quiz-item {
-  background-color: #2C3333;
-  color: #0E8388;
+@keyframes moveUp {
+  to {
+    transform: translateY(-30rem);
+  }
 }
-.quiz-item__header {
-  padding: 0.25rem 0 0 0;
-  border-bottom: 1px solid aliceblue;
-  background-color: #2C3333;
-  color: #0E8388;
+@keyframes moveUpDisappear {
+  to {
+    transform: translateY(-30rem);
+    display: none;
+  }
 }
-.quiz-item ul {
-  padding: 0;
-}
-.quiz-item ul li {
-  padding: 0.9rem;
-  max-width: 90%;
-  margin: 0 auto 0.25rem auto;
-}
-.quiz-item__answer {
-  background-color: #0E8388;
-  color: aliceblue;
-}
-.quiz-item__answer-picked {
-  background-color: #CBE4DE;
-  color: #0E8388;
-}
-
 .result-body {
   background-color: #2C3333;
   color: #CBE4DE;
@@ -10851,7 +10867,7 @@ label {
 body {
   margin: 0 0;
   padding: 0 0;
-  background-color: #CBE4DE;
+  background-image: linear-gradient(to right, #97E7E1, #F8F6E3);
   font-family: "Golos Text", sans-serif;
 }
 
