--- a/scss/components/quiz-body/_quiz-body.scss
+++ b/scss/components/quiz-body/_quiz-body.scss
@@ -1,34 +1,67 @@
-.quiz-item {
-    background-color: #2C3333;
-    color: #0E8388;
 
-    &__header{
-        padding: .25rem 0 0 0;
-        border-bottom: 1px solid aliceblue;
-        background-color: #2C3333;
-        color: #0E8388;
+main {
+    position: relative;
+}
 
-    }
-
-    ul {
-        padding: 0;
-        li {
-            padding: .9rem;
-            max-width: 90%;
-            margin: 0 auto .25rem auto;
-        }
-    }
-
-    &__answer{
-        background-color: #0E8388;
-        color: aliceblue;
-        
-
-        &-picked {
-            background-color: #CBE4DE;
-            color: #0E8388;
-        }
-    }
-
+.quiz-items__wrapper {
+    position: absolute;
+    height: 30rem;
+    width: 100%;
+    overflow: hidden;
+    background-color: #000000;
     
+}   
+
+
+.quiz-item__el {
+    width: calc(100% - 1.25rem);
+    height: 20rem;
+    min-height: 20rem;
+    position: relative;
+    background-color: aliceblue;
+    margin: .5rem auto;
+    ::before {
+        content: attr(data-id);
+        display: block;
+        position: absolute;
+        background-color: red($color: #000000);
+        font-size: large;
+    }
+ 
+}
+
+
+// .covered-item {
+//     position: relative;
+//     // animation: moveUp .5s ease-in;
+//     // ::before {
+//     //     content: '';
+//     //     display: block;
+//     //     width: 100%;
+//     //     height: 100%;
+//     //     background-color: #000000;
+//     //     top: 0;
+//     //     left: 0;
+
+//     // }
+// }
+
+.move-item {
+    animation: moveUpDisappear .5s ease-in;
+    display: none;
+}
+
+
+
+@keyframes moveUp {
+    to {
+        transform: translateY(-30rem);
+    }
+}
+
+@keyframes moveUpDisappear {
+    to {
+        transform: translateY(-30rem);
+        display: none;
+    }
 }
