--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10785,67 +10785,43 @@ ul li {
   font-size: 1.5rem;
 }
 
-main {
-  width: 65rem;
-  min-width: 65rem;
-  height: 32.5rem;
-  min-height: 32.5rem;
-  margin: 1.5rem auto 0 auto;
-}
-main .quiz-title {
+.quiz-title {
   text-align: center;
   padding: 0.75rem;
   font-size: 2.5rem;
   font-weight: 700;
   border-bottom: 0.05rem solid black;
+  max-width: max-content;
+  text-wrap: wrap;
+  margin: 0 auto;
+  max-width: 60rem;
+  line-height: 2rem;
+}
+
+main {
+  width: 65rem;
+  max-width: 65rem;
+  height: 32.5rem;
+  min-height: 32.5rem;
+  margin: 1.5rem auto 0 auto;
 }
 main .quiz-modification__container {
   margin: 1.25rem 0 0 0;
 }
-
-main {
-  position: relative;
-}
-
-.quiz-items__wrapper {
-  position: absolute;
-  height: 20rem;
+main .topic-choices__container {
   width: 100%;
-  overflow: hidden;
+  display: grid;
+  gap: 0.5rem;
+  grid-auto-flow: column;
+  grid-auto-columns: 20%;
+  overflow: auto;
+  overscroll-behavior-inline: contain;
+}
+main .topic-choices__container-sub {
+  padding: 0.5rem;
+  height: 7rem;
 }
 
-.quiz-item__el {
-  width: calc(100% - 1.25rem);
-  height: 20rem;
-  min-height: 20rem;
-  position: relative;
-  background-color: aliceblue;
-  margin: 0.5rem auto;
-}
-.quiz-item__el ::before {
-  content: attr(data-id);
-  display: block;
-  position: absolute;
-  background-color: 0;
-  font-size: large;
-}
-
-.move-item {
-  animation: moveUpDisappear 0.5s ease-in;
-  display: none;
-}
-
-@keyframes moveUp {
-  to {
-    transform: translateY(-30rem);
-  }
-}
-@keyframes moveUpDisappear {
-  to {
-    transform: translateY(-30rem);
-    display: none;
-  }
-}
 .result-body {
   background-color: #2C3333;
   color: #CBE4DE;
