--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -20,15 +20,11 @@ main {
     min-height:32.5rem;
     margin: 1.5rem auto 0 auto;
 
-
-    
-
     .quiz-modification__container {
         margin: 1.25rem 0 0 0 ;
     }
 
     .topic-choices__container {
-        width: 100%;
         display: grid;
         gap: .5rem;
         grid-auto-flow: column;
@@ -36,6 +32,18 @@ main {
 
         overflow: auto;
         overscroll-behavior-inline: contain;
+
+        &-sub {
+            padding: .5rem;
+            height: 7rem;
+        }
+    }
+
+    .difficulty-radios__container {
+        display: grid;
+        gap: .5rem;
+        grid-auto-flow: column;
+        grid-auto-columns: 32%;
 
         &-sub {
             padding: .5rem;
