--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10799,7 +10799,9 @@ ul li {
 }
 
 main {
-  width: 65rem;
+  --_spacer: 1rem;
+  --_height-choices: 8.5rem;
+  --_input-choice__size: 1.25rem;
   max-width: 65rem;
   height: 32.5rem;
   min-height: 32.5rem;
@@ -10808,27 +10810,82 @@ main {
 main .quiz-modification__container {
   margin: 1.25rem 0 0 0;
 }
+main .quiz-modification__container label[for=timer], main .quiz-modification__container label[for=item] {
+  display: block;
+}
+main .quiz-modification__container input[name=item], main .quiz-modification__container input[name=timer] {
+  width: 80%;
+}
+main .topic-choices__group {
+  grid-auto-columns: 100%;
+}
 main .topic-choices__container {
   display: grid;
-  gap: 0.5rem;
+  gap: var(--_spacer);
   grid-auto-flow: column;
-  grid-auto-columns: 20%;
-  overflow: auto;
+  grid-auto-columns: 25%;
+  overflow-x: auto;
   overscroll-behavior-inline: contain;
+  padding: 0 var(--_spacer) var(--_spacer) var(--_spacer);
 }
 main .topic-choices__container-sub {
-  padding: 0.5rem;
-  height: 7rem;
+  padding: 0.75rem;
+  height: var(--_height-choices);
+  min-height: var(--_height-choices);
+  border: 1px solid black;
+  border-radius: 0.25rem;
+  display: grid;
+  gap: var(--_spacer);
+  grid-auto-flow: column;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+main .topic-choices__container-sub input[type=checkbox] {
+  width: var(--_input-choice__size);
+  height: var(--_input-choice__size);
+  background-color: white;
+  z-index: 5;
+}
+main .topic-choices__container-sub img {
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+@media screen and (max-width: 700px) {
+  main .topic-choices__container {
+    grid-auto-columns: 50%;
+  }
+}
+main .snaps-inline {
+  scroll-snap-type: inline mandatory;
+}
+main .snaps-inline > * {
+  scroll-snap-align: start;
+  scroll-padding-inline: var(--_spacer);
 }
 main .difficulty-radios__container {
   display: grid;
-  gap: 0.5rem;
+  gap: var(--_spacer);
   grid-auto-flow: column;
-  grid-auto-columns: 32%;
+  grid-auto-columns: 31%;
+  padding: 0 var(--_spacer) var(--_spacer) var(--_spacer);
+  justify-content: space-around;
 }
 main .difficulty-radios__container-sub {
-  padding: 0.5rem;
-  height: 7rem;
+  border: 1px solid black;
+  height: var(--_height-choices);
+  min-height: var(--_height-choices);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .difficulty-radios__container-sub input[type=radio] {
+  width: var(--_input-choice__size);
+  height: var(--_input-choice__size);
 }
 
 .result-body {
