--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -14,40 +14,108 @@
 }
 
 main {
-    width: 65rem;
+    --_spacer: 1rem;
+    --_height-choices: 8.5rem;
+    --_input-choice__size: 1.25rem;
     max-width: 65rem;
     height: 32.5rem;
     min-height:32.5rem;
     margin: 1.5rem auto 0 auto;
 
     .quiz-modification__container {
-        margin: 1.25rem 0 0 0 ;
-    }
+        margin: 1.25rem 0 0 0;
 
-    .topic-choices__container {
-        display: grid;
-        gap: .5rem;
-        grid-auto-flow: column;
-        grid-auto-columns: 20%;
+        label[for="timer"],label[for="item"] {
+            display: block;
+        }
 
-        overflow: auto;
-        overscroll-behavior-inline: contain;
-
-        &-sub {
-            padding: .5rem;
-            height: 7rem;
+        input[name="item"],input[name="timer"] {
+           width: 80%;
+            
         }
     }
 
+    .topic-choices__group {
+        grid-auto-columns: 100%;
+    } 
+    .topic-choices__container {
+        display: grid;
+        gap: var(--_spacer);
+        grid-auto-flow: column;
+        grid-auto-columns: 25%;
+        overflow-x: auto;
+        overscroll-behavior-inline: contain;
+        padding: 0 var(--_spacer) var(--_spacer) var(--_spacer);
+    
+        &-sub {
+            padding: .75rem;
+            height: var(--_height-choices);
+            min-height: var(--_height-choices);
+            border: 1px solid black;
+            border-radius: .25rem;
+
+            display: grid;
+            gap: var(--_spacer);
+            grid-auto-flow: column;
+            position: relative;
+            align-items: center;
+            justify-content: center;
+
+            input[type="checkbox"]{
+          
+                width: var(--_input-choice__size);
+                height: var(--_input-choice__size);
+                background-color: white;
+                z-index: 5;
+            }
+            img {
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                z-index: -1;
+            }
+        }
+    }
+
+    @media screen and (max-width: 700px){
+        .topic-choices__container {
+            grid-auto-columns: 50%;
+        }
+    }
+
+    .snaps-inline {
+        scroll-snap-type: inline mandatory;
+
+    }
+
+    .snaps-inline >* {
+        scroll-snap-align: start;
+        scroll-padding-inline: var(--_spacer);
+    }
+
+  
+
     .difficulty-radios__container {
         display: grid;
-        gap: .5rem;
+        gap: var(--_spacer);
         grid-auto-flow: column;
-        grid-auto-columns: 32%;
-
+        grid-auto-columns: 31%;
+        padding: 0 var(--_spacer) var(--_spacer) var(--_spacer);
+        justify-content: space-around;
         &-sub {
-            padding: .5rem;
-            height: 7rem;
+           border: 1px solid black; 
+            height: var(--_height-choices);
+            min-height: var(--_height-choices);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            input[type="radio"]{
+                width: var(--_input-choice__size);
+                height: var(--_input-choice__size);
+            }
         }
     }
 }
