--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -1,21 +1,22 @@
 @use '../../abstract/compilerfile' as *;
 .quiz-title {
     text-align: center;
-    padding: .75rem;
     font-size: $header;
-    font-weight: 700;
-    border-bottom: .05rem solid black;
+    padding: .25rem;
     max-width: max-content;
     text-wrap: wrap;
     margin: 0 auto;
 
     max-width: 60rem;
     line-height: 2rem;
+
+    text-transform: uppercase;
+    font-weight: 800;
 }
 
 main {
     --_spacer: 1rem;
-    --_height-choices: 8.5rem;
+    --_height-choices: 7.5rem;
     --_input-choice__size: 1.25rem;
     max-width: 65rem;
     height: 32.5rem;
@@ -24,14 +25,17 @@ main {
 
     .quiz-modification__container {
         margin: 1.25rem 0 0 0;
-
+        text-align: center;
+        .main-label {
+            font-size: $subheader;
+        }
         label[for="timer"],label[for="item"] {
             display: block;
         }
 
         input[name="item"],input[name="timer"] {
-           width: 80%;
-            
+            width: 45%;
+           margin: 0 auto;
         }
     }
 
@@ -60,12 +64,17 @@ main {
             position: relative;
             align-items: center;
             justify-content: center;
-
+           
+            
             input[type="checkbox"]{
           
                 width: var(--_input-choice__size);
                 height: var(--_input-choice__size);
                 background-color: white;
+                z-index: 5;
+            }
+
+            label {
                 z-index: 5;
             }
             img {
@@ -74,8 +83,26 @@ main {
                 top: 0;
                 width: 100%;
                 height: 100%;
-                z-index: -1;
+                z-index: 1;
             }
+        }
+
+        &-sub::before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+        
+            z-index: 2;
+
+            /* From https://css.glass */
+            background: rgba(255, 255, 255, 0.2);   
+            backdrop-filter: blur(2px);
+            -webkit-backdrop-filter: blur(1px);
+            
         }
     }
 
@@ -101,7 +128,7 @@ main {
         display: grid;
         gap: var(--_spacer);
         grid-auto-flow: column;
-        grid-auto-columns: 31%;
+        grid-auto-columns: 30%;
         padding: 0 var(--_spacer) var(--_spacer) var(--_spacer);
         justify-content: space-around;
         &-sub {
