pushed updated font style and also animation for choosing a topic

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -4,5 +4,5 @@ body {
     margin: 0 0;
     padding: 0 0;
     background-image: linear-gradient(to right, $secondary, $primary);
-    font-family: 'Golos Text', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
