--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -18,6 +18,7 @@ main {
     --_spacer: 1rem;
     --_height-choices: 7.5rem;
     --_input-choice__size: 1.25rem;
+    --_radius-common: .25rem;
     max-width: 65rem;
     height: 32.5rem;
     min-height:32.5rem;
@@ -42,7 +43,7 @@ main {
     .topic-choices__group {
         grid-auto-columns: 100%;
     } 
-    .topic-choices__container {
+    .topic-choices__container-default {
         display: grid;
         gap: var(--_spacer);
         grid-auto-flow: column;
@@ -55,15 +56,15 @@ main {
             padding: .75rem;
             height: var(--_height-choices);
             min-height: var(--_height-choices);
-            border: 1px solid black;
-            border-radius: .25rem;
+
+            border-radius: var(--_radius-common);
 
             display: grid;
             gap: var(--_spacer);
             grid-auto-flow: column;
             position: relative;
             align-items: center;
-            justify-content: center;
+            justify-content: center; 
            
             
             input[type="checkbox"]{
@@ -84,8 +85,13 @@ main {
                 width: 100%;
                 height: 100%;
                 z-index: 1;
-            }
+                border-radius: var(--_radius-common);
+
+                transform: scale(1, 1);
+                transition: transform  .08s ease-in;
+            }   
         }
+
 
         &-sub::before {
             content: "";
@@ -93,17 +99,31 @@ main {
             position: absolute;
             top: 0;
             left: 0;
+            border-radius: var(--_radius-common);
+
             height: 100%;
             width: 100%;
-        
+    
             z-index: 2;
-
-            /* From https://css.glass */
             background: rgba(255, 255, 255, 0.2);   
             backdrop-filter: blur(2px);
             -webkit-backdrop-filter: blur(1px);
-            
+   
+
+            transition: height .05s ease-in;
         }
+
+        &-sub:hover::before {
+            height: 0%;
+            transition: height .05s ease-out;
+        }
+
+        &-sub:hover img {
+            transform: scale(1.05, 1.05);
+            transition: transform .08s ease-out;
+        }
+
+      
     }
 
     @media screen and (max-width: 700px){
