--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10802,6 +10802,7 @@ main {
   --_spacer: 1rem;
   --_height-choices: 7.5rem;
   --_input-choice__size: 1.25rem;
+  --_radius-common: .25rem;
   max-width: 65rem;
   height: 32.5rem;
   min-height: 32.5rem;
@@ -10824,7 +10825,7 @@ main .quiz-modification__container input[name=item], main .quiz-modification__co
 main .topic-choices__group {
   grid-auto-columns: 100%;
 }
-main .topic-choices__container {
+main .topic-choices__container-default {
   display: grid;
   gap: var(--_spacer);
   grid-auto-flow: column;
@@ -10833,12 +10834,11 @@ main .topic-choices__container {
   overscroll-behavior-inline: contain;
   padding: 0 var(--_spacer) var(--_spacer) var(--_spacer);
 }
-main .topic-choices__container-sub {
+main .topic-choices__container-default-sub {
   padding: 0.75rem;
   height: var(--_height-choices);
   min-height: var(--_height-choices);
-  border: 1px solid black;
-  border-radius: 0.25rem;
+  border-radius: var(--_radius-common);
   display: grid;
   gap: var(--_spacer);
   grid-auto-flow: column;
@@ -10846,36 +10846,48 @@ main .topic-choices__container-sub {
   align-items: center;
   justify-content: center;
 }
-main .topic-choices__container-sub input[type=checkbox] {
+main .topic-choices__container-default-sub input[type=checkbox] {
   width: var(--_input-choice__size);
   height: var(--_input-choice__size);
   background-color: white;
   z-index: 5;
 }
-main .topic-choices__container-sub label {
+main .topic-choices__container-default-sub label {
   z-index: 5;
 }
-main .topic-choices__container-sub img {
+main .topic-choices__container-default-sub img {
   object-fit: cover;
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
   z-index: 1;
+  border-radius: var(--_radius-common);
+  transform: scale(1, 1);
+  transition: transform 0.08s ease-in;
 }
-main .topic-choices__container-sub::before {
+main .topic-choices__container-default-sub::before {
   content: "";
   display: block;
   position: absolute;
   top: 0;
   left: 0;
+  border-radius: var(--_radius-common);
   height: 100%;
   width: 100%;
   z-index: 2;
-  /* From https://css.glass */
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(2px);
   -webkit-backdrop-filter: blur(1px);
+  transition: height 0.05s ease-in;
+}
+main .topic-choices__container-default-sub:hover::before {
+  height: 0%;
+  transition: height 0.05s ease-out;
+}
+main .topic-choices__container-default-sub:hover img {
+  transform: scale(1.05, 1.05);
+  transition: transform 0.08s ease-out;
 }
 @media screen and (max-width: 700px) {
   main .topic-choices__container {
@@ -10999,7 +11011,7 @@ body {
   margin: 0 0;
   padding: 0 0;
   background-image: linear-gradient(to right, #97E7E1, #F8F6E3);
-  font-family: "Golos Text", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /*# sourceMappingURL=style.css.map */
