--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10809,11 +10809,12 @@ main {
   margin: 1.5rem auto 0 auto;
 }
 main .quiz-modification__container {
-  margin: 1.25rem 0 0 0;
+  margin: 0.95rem 0 0 0;
   text-align: center;
 }
 main .quiz-modification__container .main-label {
   font-size: 1.25rem;
+  text-transform: uppercase;
 }
 main .quiz-modification__container label[for=timer], main .quiz-modification__container label[for=item] {
   display: block;
@@ -10845,6 +10846,7 @@ main .topic-choices__container-default-sub {
   position: relative;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 main .topic-choices__container-default-sub input[type=checkbox] {
   width: var(--_input-choice__size);
@@ -10876,18 +10878,56 @@ main .topic-choices__container-default-sub::before {
   height: 100%;
   width: 100%;
   z-index: 2;
-  background: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(1px);
-  transition: height 0.05s ease-in;
+  -webkit-backdrop-filter: blur(2px);
+  transition: backdrop-filter 0.05s ease-in, background-color 0.05s ease-in;
 }
 main .topic-choices__container-default-sub:hover::before {
-  height: 0%;
-  transition: height 0.05s ease-out;
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  background-color: unset;
+  transition: backdrop-filter 0.04s ease-in-out, background-color 0.05s ease-in;
 }
 main .topic-choices__container-default-sub:hover img {
   transform: scale(1.05, 1.05);
-  transition: transform 0.08s ease-out;
+  transition: transform 0.08s ease-in-out;
+}
+main .topic-choices__container-default-active {
+  padding: 0.75rem;
+  height: var(--_height-choices);
+  min-height: var(--_height-choices);
+  border-radius: var(--_radius-common);
+  display: grid;
+  gap: var(--_spacer);
+  grid-auto-flow: column;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+main .topic-choices__container-default-active input[type=checkbox] {
+  width: var(--_input-choice__size);
+  height: var(--_input-choice__size);
+  background-color: white;
+  z-index: 5;
+}
+main .topic-choices__container-default-active label {
+  color: yellow;
+  font-size: 1.15rem;
+  z-index: 5;
+  transition: color 0.05s ease-in, font-size 0.05s ease-in;
+}
+main .topic-choices__container-default-active img {
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  border-radius: var(--_radius-common);
+  transform: scale(1.05, 1.05);
+  transition: transform 0.08s ease-in;
 }
 @media screen and (max-width: 700px) {
   main .topic-choices__container-default {
@@ -10920,6 +10960,17 @@ main .difficulty-radios__container-sub {
 main .difficulty-radios__container-sub input[type=radio] {
   width: var(--_input-choice__size);
   height: var(--_input-choice__size);
+}
+
+.error-message {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem 0;
+  background-color: black;
+  color: red;
 }
 
 .quiz-main__header {
