--- a/scss/components/quiz-body/_quiz-body.scss
+++ b/scss/components/quiz-body/_quiz-body.scss
@@ -47,6 +47,7 @@
 }
 
 .quiz-answers {
+    --_spacing: .5rem;
     display: flex;
     gap: .5rem;
     flex-wrap: wrap;
@@ -68,6 +69,34 @@
         backdrop-filter: blur(5px);
         -webkit-backdrop-filter: blur(5px);
         border: 1px solid rgba(255, 255, 255, 0.3);
+        transform: translateY(0rem);
+        transition: transform .25s ease-in;
+        position: relative;
+
+        span {
+            pointer-events: none;
+            svg {
+                position: absolute;
+                top: calc(var(--_spacing) + var(--_spacing) * .5);
+                left: calc(var(--_spacing) + var(--_spacing) * .5);
+
+              
+                transform: scale(1,1);
+                transition:
+                transform .25s ease-in;            
+            }
+        }
+        &-active {
+            transform: translateY(-.25rem);
+            transition: transform .25s ease-in;
+
+            svg {
+                fill: green;
+                transform: scale(1.05,1.05);
+                transition: fill .25s ease-out,
+                transform .25s ease-out;                
+            }
+        }
     }
 }
 
