--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11105,19 +11105,23 @@ svg {
   padding: 0.25rem;
 }
 
+.result-body {
+  --_spacing: .5rem;
+}
 .result-body__item {
   width: 75%;
-  margin: 0 auto;
+  margin: var(--_spacing) auto;
   padding: 0.75rem;
   position: relative;
+  border-radius: var(--_spacing);
 }
 .result-body__item::after {
   content: "*";
   display: block;
   font-size: 2.05rem;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: calc(var(--_spacing) + var(--_spacing) * 0.02);
+  left: calc(var(--_spacing) - var(--_spacing) * 1.5);
 }
 
 body {
