--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11107,16 +11107,16 @@ svg {
 
 .result-body {
   --_spacing: .5rem;
+  --_content-spacing: 1.25rem;
 }
 .result-body__item {
   width: 75%;
   margin: var(--_spacing) auto;
-  padding: 0.75rem;
+  padding: var(--_content-spacing);
   position: relative;
   border-radius: var(--_spacing);
 }
-.result-body__item::after {
-  content: "*";
+.result-body__item svg {
   display: block;
   font-size: 2.05rem;
   position: absolute;
